[package]
name = "bedlam"
version = "0.0.0"
authors = ["Zakarum <zakarumych@ya.ru>"]
edition = "2018"
description = "noise generator"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/bedlam"
keywords = ["no-std", "procedural", "noise"]
categories = ["no-std", "algorithms"]
repository = "https://github.com/zakarumych/bedlam"
readme = "README.md"
